service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-site-service
spec:
  type: NodePort
  selector:
    app: static-site
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
